--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "@types/redux": "^3.6.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
